packages/yew-macro/tests/function_component_attr/mut-ref-props-param-fail.stderr
error: reference must not be mutable
 --> $DIR/mut-ref-props-param-fail.rs:9:17
  |
9 | fn comp(props: &mut Props) -> Html {
  |                 ^^^
