packages/yew-macro/tests/function_component_attr/mut-ref-props-param-fail.rs
use yew::prelude::*;

#[derive(Clone, Properties, PartialEq)]
struct Props {
    a: usize,
}

#[component(Comp)]
fn comp(props: &mut Props) -> Html {
    html! {
        <p>
            { props.a }
        </p>
    }
}

fn main() {}
